# JellyBelly

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  singlearraykhash.c
misc/: kseq_practice.c  kseq_practice.h  singlearraykhash.c  smercpy.c
python/: JellyBellyUMAP.py  README.md  belly_vector.py  binparser.py  compute_EUdist.py  create_PCAplot.py  create_UMAPplot.py
spaces/: create_spaces.c  space_functions.c  space_functions.h
src/: bellyFun.c  bellyFun.h  bellyHash.c  bellyHash.h  bellyMisc.c  bellyMisc.h  bellySmer.c  bellySmer.h  char_array.c  khash.c  main.c  main.h
utilities/: distMatrix.c
